--- a/spaceworm2.html
+++ b/spaceworm2.html
@@ -285,7 +285,7 @@ body {
 <!-- </div> -->
 <div class="game-wrapper">
     <div id="game-container">
-        <img id="comet" class="game-object" src="images/comet.gif" alt="comet" style="width: 50px; height: 50px;">
+        <img id="comet" class="game-object" src="http://monoganon.com/Images/comet.gif" alt="comet" style="width: 50px; height: 50px;">
     </div>
     <div id="numpad" style="display: none;">
         <div class="numpad-row">
